--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h2 style="text-align:center">Nani Mathala</h2>
            <h3 style="text-align:margin">google launching new application gemini</h3>
   </head>
-  <body>
+  <body bgcolor="brown">
     <div style="text-align:center;">
       <img src="img.jpeg" width="25%" style="margin:auto;">
     </div>
@@ -17,6 +17,7 @@
 	  height="215" 
 		src="https://www.youtube.com/embed/gwEuvrI4fx4?si=u7R60V2C2dXu5rMv"
 	 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+   <marquee bgcolor="yellow">google launching new application gemini</marquee>
   </body>
 </html>
 
