--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <br>
    <center> <iframe
 	 width="360" 
-	  height="215" 
+	  height="275" 
 		src="https://www.youtube.com/embed/gwEuvrI4fx4?si=u7R60V2C2dXu5rMv"
 	 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
-   <marquee bgcolor="yellow">google launching new application gemini</marquee>
+   <marquee bgcolor="biue">google launching new application gemini</marquee>
   </body>
 </html>
 
