--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		src="https://www.youtube.com/embed/gwEuvrI4fx4?si=u7R60V2C2dXu5rMv"
 	 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
    <marquee bgcolor="white">google launching new application gemini</marquee>
-   <a href="cse.html>"here about me</a></a>
+   <a href="cse.html">here about me</a>
   </body>
 </html>
 
