--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body bgcolor="brown">
     <div style="text-align:center;">
       <img src="img.jpeg" width="45%" style="margin:auto;">
+	<img src="ntr.jpg" width="40">
     </div>
     <br>
     
