--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body bgcolor="brown">
     <div style="text-align:center;">
       <img src="img.jpeg" width="45%" style="margin:auto;">
-	<img src="ntr.jpg" width="300">
+	<img src="andre-benz-cXU6tNxhub0-unsplash.jpg" width="45%" style="margin:auto;">
     </div>
     <br>
     
