--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		src="https://www.youtube.com/embed/gwEuvrI4fx4?si=u7R60V2C2dXu5rMv"
 	 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
    <marquee bgcolor="white">google launching new application gemini</marquee>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/2P_MJYU8QZc?si=GhK9O6IIkrn9Mvu2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
    <a href="cse.html">here about me</a>
   </body>
 </html>
